@@ -32,6 +32,7 @@ import cn.taketoday.lang.Assert;
 import cn.taketoday.logging.Logger;
 import cn.taketoday.logging.LoggerFactory;
 import io.netty.buffer.PooledByteBufAllocator;
+import lombok.extern.java.Log;
 
 /**
  * Implementation of the {@code DataBufferFactory} interface that keeps track of
@@ -72,7 +73,7 @@ public class LeakAwareDataBufferFactory implements DataBufferFactory {
   }
 
   /**
-   * Checks whether all of the data buffers allocated by this factory have also been released.
+   * Checks whether all the data buffers allocated by this factory have also been released.
    * If not, then an {@link AssertionError} is thrown. Typically used from a JUnit <em>after</em>
    * method.
    */
@@ -95,7 +96,7 @@ public class LeakAwareDataBufferFactory implements DataBufferFactory {
       List<AssertionError> errors = this.created.stream()
               .filter(LeakAwareDataBuffer::isAllocated)
               .map(LeakAwareDataBuffer::leakError)
-              .collect(Collectors.toList());
+              .toList();
 
       errors.forEach(it -> logger.error("Leaked error: ", it));
       throw new AssertionError(errors.size() + " buffer leaks detected (see logs above)");
@@ -103,6 +104,7 @@ public class LeakAwareDataBufferFactory implements DataBufferFactory {
   }
 
   @Override
+  @Deprecated
   public DataBuffer allocateBuffer() {
     return createLeakAwareDataBuffer(this.delegate.allocateBuffer());
   }
@@ -137,6 +139,11 @@ public class LeakAwareDataBufferFactory implements DataBufferFactory {
             .map(o -> o instanceof LeakAwareDataBuffer ? ((LeakAwareDataBuffer) o).dataBuffer() : o)
             .collect(Collectors.toList());
     return new LeakAwareDataBuffer(this.delegate.join(dataBuffers), this);
+  }
+
+  @Override
+  public boolean isDirect() {
+    return this.delegate.isDirect();
   }
 
 }
